syntax = "proto3";

package protocol;

import "proto/common.proto";
import "proto/status.proto";

option go_package = "protocol;protocol";

// 批量获取班级信息(只包括基础的信息，班级名称)
message GetClassesReq
{
    int64 page_index = 1;
    int64 page_num = 2;
}
message GetClassesResp
{
    Status status = 1;
    repeated Class classes = 2;
    int64 page_index = 3;
    int64 page_num = 4;
    int64 total = 5;
}

// 根据ID获得班级具体信息
message GetClassByIDReq
{
    int64 id = 1;
}
message GetClassByIDResp
{
    Status status = 1;
    Class class = 2;
}

// 新增班级
message AddClassReq
{
    Class class = 1;
}
message AddClassResp
{
    Status status = 1;
    bool is_success = 2;
}

// 修改班级信息
message EditClassReq
{
    Class class = 1;        // 只需要填充id以及改变的field
}
message EditClassResp
{
    Status status = 1;
    bool is_success = 2;
}

// 小组成员管理
message MemberManageReq
{
    enum ManageType
    {
        DELETE = 0;                 // 删除小组成员
        SET_ADMINISTRATOR = 1;      // 设置成管理员
        CANCEL_ADMINISTRATOR = 2;   // 取消管理员
    }
    ManageType manage_type = 1;
    int64 class_id = 2;
    int64 member_id = 3;
}
message MemberManageResp
{
    Status status = 1;
    bool is_success = 2;
}

